--- a/index.html
+++ b/index.html
@@ -4,10 +4,51 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Alan's Landing Page</title>
     <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
+    <header>
+        <nav class="text-right">
+          <ul>
+            <li> <a href="https://github.com/">Github</a></li>
+            <li> <a href="https://hackertyper.net/">Portfolio</a></li>
+            <li> <a href="mailto: pharos199@gmail.com">Contact</a></li>
+          </ul>
+        </nav>
+      </header>
     
+    <main>
+        <h1 class="text-center">Class Mini Project</h1>
+    <figure>
+        <img src="assets/richie_as_monkey.jpg" alt="Picture of a Monkey">
+        <figcaption></figcaption>
+        </figure>
+        <section id="contact">
+        <h2 cljass="text-center">Please fill out your contact information</h2>
+        <form>
+            <ul>
+                <li>
+            <label for="fname">First Name</label>
+            <input type="text" id="fname" name="First Name">
+            </li>
+            <li>
+            <label for="iname">Last Name</label>
+            <input type="text" id="lname" name="Last Name">
+            </li>
+            <li>            
+            <label for="email">Email Address</label>
+            <input type="text" id="email" name="Email Address">
+            </li>
+        </ul>
+            <div class="text-center">
+                <button type="submit">SEND</button>
+            </div>
+        </form>
+    <footer class="text-center"> 
+        © 2022 My New Website Productions By Alan Martinez
+        </footer>
+
 </body>
 </html>
